--- a/pax-cdi-weld/pom.xml
+++ b/pax-cdi-weld/pom.xml
@@ -51,6 +51,12 @@
             <artifactId>org.osgi.core</artifactId>
             <scope>provided</scope>
         </dependency>
+        
+        <dependency>
+            <groupId>org.osgi</groupId>
+            <artifactId>org.osgi.compendium</artifactId>
+            <scope>provided</scope>
+        </dependency>
 
         <dependency>
             <groupId>javax.enterprise</groupId>
