--- a/itest/src/it/itest-karaf/pom.xml
+++ b/itest/src/it/itest-karaf/pom.xml
@@ -5,7 +5,7 @@
         <groupId>org.ops4j.pax.cdi</groupId>
         <version>1.0.0-SNAPSHOT</version>
         <artifactId>pax-cdi-parent</artifactId>
-        <relativePath>../../../../pax-cdi-parent/pom.xml</relativePath>
+        <relativePath>../../../../pax-cdi-parent</relativePath>
     </parent>
 
     <groupId>org.ops4j.pax.cdi.itest</groupId>
