--- a/tck/pax-cdi-tck11-runner/pom.xml
+++ b/tck/pax-cdi-tck11-runner/pom.xml
@@ -117,6 +117,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.osgi</groupId>
+            <artifactId>org.osgi.compendium</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
             <groupId>org.eclipse.tycho</groupId>
             <artifactId>org.eclipse.osgi</artifactId>
             <scope>test</scope>
