--- a/pax-cdi-samples/pom.xml
+++ b/pax-cdi-samples/pom.xml
@@ -24,6 +24,11 @@
         <module>pax-cdi-sample5-client1</module>
         <module>pax-cdi-sample5-client2</module>
         <module>pax-cdi-sample6</module>
+        <module>pax-cdi-sample7-api</module>
+        <module>pax-cdi-sample7-service-impl100</module>
+        <module>pax-cdi-sample7-service-impl101</module>
+        <module>pax-cdi-sample7-service-impl102</module>
+        <module>pax-cdi-sample7-client-dynamic</module>
     </modules>
 
 </project>
