--- a/pax-cdi-samples/pax-cdi-sample2-service/pom.xml
+++ b/pax-cdi-samples/pax-cdi-sample2-service/pom.xml
@@ -81,6 +81,9 @@
                         <Bundle-SymbolicName>org.ops4j.pax.cdi.sample2.service</Bundle-SymbolicName>
                         <Import-Package>
                             javax.persistence*;version="[1.1,3)",
+                            org.apache.deltaspike.partialbean.impl.interception,
+                            org.apache.deltaspike.partialbean.impl.proxy,
+                            org.apache.deltaspike.data.impl.handler,
                             *
                         </Import-Package>
                         <Require-Capability>
