--- a/pom.xml
+++ b/pom.xml
@@ -101,7 +101,7 @@
 
     <issueManagement>
         <system>jira</system>
-        <url>http://issues.ops4j.org/jira/browse/PAXCDI</url>
+        <url>http://team.ops4j.org/browse/PAXCDI</url>
     </issueManagement>
 
     <developers>
