--- a/pax-cdi-parent/pom.xml
+++ b/pax-cdi-parent/pom.xml
@@ -417,6 +417,56 @@
                 </repository>
             </repositories>
         </profile>
+
+        <!-- Profiles for "Sonar" -->
+        <!-- The sonar profile should be activated by setting property 'sonar'. That's important because 
+            we need to set an empty 'jacoco.argLine' otherwise. You can't define an empty default for that property 
+            in the global properties section because the empty value will override the value from Jacoco. -->
+        <profile>
+            <id>no-sonar</id>
+            <activation>
+                <property>
+                    <name>!sonar</name>
+                </property>
+            </activation>
+            <properties>
+                <jacoco.argLine />
+            </properties>
+        </profile>
+        <profile>
+            <id>sonar</id>
+            <activation>
+                <property>
+                    <name>sonar</name>
+                </property>
+            </activation>
+            <properties>
+                <sonar.jacoco.reportPath>${user.dir}/target/jacoco.exec</sonar.jacoco.reportPath>
+            </properties>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.jacoco</groupId>
+                        <artifactId>jacoco-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>jacoco</id>
+                                <phase>validate</phase>
+                                <goals>
+                                    <goal>prepare-agent</goal>
+                                </goals>
+                                <configuration>
+                                    <append>true</append>
+                                    <destFile>${sonar.jacoco.reportPath}</destFile>
+                                    <propertyName>jacoco.argLine</propertyName>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
     </profiles>
 
 </project>
