--- a/tck/pom.xml
+++ b/tck/pom.xml
@@ -1,25 +1,25 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>org.ops4j.pax.cdi</groupId>
-		<artifactId>pax-cdi-parent</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
-		<relativePath>../pax-cdi-parent/</relativePath>
-	</parent>
-	<artifactId>tck</artifactId>
-	<packaging>pom</packaging>
-    
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.ops4j.pax.cdi</groupId>
+        <artifactId>pax-cdi-parent</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+        <relativePath>../pax-cdi-parent/</relativePath>
+    </parent>
+    <artifactId>tck</artifactId>
+    <packaging>pom</packaging>
+
     <name>OPS4J Pax CDI TCK Aggregator</name>
 
-	<properties>
-		<arquillian.version>1.1.2.Final</arquillian.version>
-		<cdi.tck.version>1.2.4.Final</cdi.tck.version>
-	</properties>
+    <properties>
+        <arquillian.version>1.1.2.Final</arquillian.version>
+        <cdi.tck.version>1.2.4.Final</cdi.tck.version>
+    </properties>
 
-	<modules>
-		<module>pax-cdi-arquillian</module>
-		<module>pax-cdi-tck11-porting</module>
-		<module>pax-cdi-tck11-runner</module>
-	</modules>
+    <modules>
+        <module>pax-cdi-arquillian</module>
+        <module>pax-cdi-tck-porting</module>
+        <module>pax-cdi-tck-runner</module>
+    </modules>
 </project>
