PAXCDI-164 @OsgiServiceProvider: Support ParameterizedType - Sample and Unit Test

--- a/pax-cdi-samples/pom.xml
+++ b/pax-cdi-samples/pom.xml
@@ -29,6 +29,7 @@
         <module>pax-cdi-sample7-service-impl101</module>
         <module>pax-cdi-sample7-service-impl102</module>
         <module>pax-cdi-sample7-client-dynamic</module>
+        <module>pax-cdi-sample8</module>
     </modules>
 
 </project>
