--- a/pax-cdi-parent/pom.xml
+++ b/pax-cdi-parent/pom.xml
@@ -16,6 +16,7 @@
         <deltaspike.version>1.3.0</deltaspike.version>
         <guava.version>13.0.1</guava.version>
         <jersey.version>1.13</jersey.version>
+        <jetty.version>9.0.7.v20131107</jetty.version>
         <logback.version>1.0.0</logback.version>
         <openwebbeans15.version>1.5.0</openwebbeans15.version>
         <openjpa.version>2.2.0</openjpa.version>
@@ -25,7 +26,7 @@
         <pax.jpa.version>0.3.0</pax.jpa.version>
         <pax.swissbox.version>1.8.1</pax.swissbox.version>
         <pax.url.version>2.4.1</pax.url.version>
-        <pax.web.version>4.0.0</pax.web.version>
+        <pax.web.version>4.0.2</pax.web.version>
         <slf4j.version>1.6.4</slf4j.version>
         <weld2.version>2.2.11.Final</weld2.version>
         <xbean.version>4.1</xbean.version>
