--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
         <module>pax-cdi-features</module>
         <module>pax-cdi-test-support</module>
         <module>pax-cdi-servlet</module>
+        <module>pax-cdi-undertow-openwebbeans</module>
         <module>pax-cdi-undertow-weld</module>
         <module>pax-cdi-manual</module>
     </modules>
