--- a/pax-cdi-samples/pax-cdi-sample3-client/pom.xml
+++ b/pax-cdi-samples/pax-cdi-sample3-client/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>pax-cdi-samples</artifactId>
         <groupId>org.ops4j.pax.cdi</groupId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0.RC1</version>
         <relativePath>..</relativePath>
     </parent>
     
