--- a/pax-cdi-parent/pom.xml
+++ b/pax-cdi-parent/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.ops4j.pax</groupId>
         <artifactId>cdi</artifactId>
-        <version>1.0.0.RC1</version>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
 
     <groupId>org.ops4j.pax.cdi</groupId>
