--- a/pax-cdi-servlet/pom.xml
+++ b/pax-cdi-servlet/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.ops4j.pax.cdi</groupId>
     <artifactId>pax-cdi-parent</artifactId>
-    <version>0.12.0</version>
+    <version>0.13.0-SNAPSHOT</version>
     <relativePath>../pax-cdi-parent</relativePath>
   </parent>
   <artifactId>pax-cdi-servlet</artifactId>
