[PAXCDI-188] Upgrade to OpenWebBeans 1.6.0
Adapted to changed internal OWB API.

--- a/pax-cdi-openwebbeans/src/main/resources/META-INF/openwebbeans/openwebbeans.properties
+++ b/pax-cdi-openwebbeans/src/main/resources/META-INF/openwebbeans/openwebbeans.properties
@@ -113,6 +113,13 @@ org.apache.webbeans.fieldInjection.useOwbSpecificInjection=false
 org.apache.webbeans.application.supportsConversation=false
 ################################################################################################
 
+################################### Default Conversation Service ###############################
+# Default implementation of org.apache.webbeans.corespi.ConversationService.
+# This one does not support conversation propagation. It's basically a no-op implementation
+# This will get overwritten in the web and jsf plugins
+org.apache.webbeans.spi.ConversationService=org.apache.webbeans.conversation.DefaultConversationService
+################################################################################################
+
 ####################### Archive Centric Beans.xml Scanning #####################################
 # If true, will enable decorators, interceptors and alternatives based on the beans.xml
 # of the appropriate archive.
@@ -131,4 +138,31 @@ org.apache.webbeans.javassist.useClassLoaderProvider=false
 #
 # org.apache.webbeans.proxy.mapping.javax.enterprise.context.RequestScoped=org.apache.webbeans.intercept.NormalScopedBeanInterceptorHandler
 org.apache.webbeans.proxy.mapping.javax.enterprise.context.ApplicationScoped=org.apache.webbeans.intercept.ApplicationScopedBeanInterceptorHandler
+org.apache.webbeans.proxy.mapping.javax.enterprise.context.RequestScoped=org.apache.webbeans.intercept.RequestScopedBeanInterceptorHandler
+org.apache.webbeans.proxy.mapping.javax.enterprise.context.SessionScoped=org.apache.webbeans.intercept.SessionScopedBeanInterceptorHandler
 ################################################################################################
+
+################################################################################################
+
+############################ Eager Session Initialisation ######################################
+# By default we do _not_ force session creation in our WebBeansConfigurationListener. We only create the
+# Session if we really need the SessionContext. E.g. when we create a Contextual Instance in it.
+# Sometimes this creates a problem as the HttpSession can only be created BEFORE anything got written back
+# to the client.
+# With this configuration you can choose between 3 settings
+#  * true: the Session will _always_ eagerly be created at the begin of a request
+#  * false: the Session will _never_ eagerly be created but only lazily when the first @SessionScoped bean gets used
+#  * any other value will be interpreted as Java regular expression for request URIs which need eager Session initialization
+org.apache.webbeans.web.eagerSessionInitialisation=false
+################################################################################################
+
+
+######################### Java version for generated proxy classes #############################
+# The Java Version to use for the generated proxy classes.
+# If "auto" then we will pick the version of the current JVM.
+# The default is set to "1.6" as some tools in jetty/tomcat/etc still
+# cannot properly handle Java8 (mostly due to older Eclipse JDT versions).
+org.apache.webbeans.generator.javaVersion=1.6
+################################################################################################
+
+
