--- a/pax-cdi-undertow-openwebbeans/src/main/resources/META-INF/openwebbeans/wab.properties
+++ b/pax-cdi-undertow-openwebbeans/src/main/resources/META-INF/openwebbeans/wab.properties
@@ -16,8 +16,7 @@ configuration.ordinal=11
 
 ################################### Default Container Lifecycle ################################
 #Default implementation of org.apache.webbeans.corespi.ContainerLifecycle.
-#org.apache.webbeans.spi.ContainerLifecycle=org.apache.webbeans.web.lifecycle.WebContainerLifecycle
-org.apache.webbeans.spi.ContainerLifecycle=org.ops4j.pax.cdi.undertow.openwebbeans.impl.WabContainerLifecycle
+org.apache.webbeans.spi.ContainerLifecycle=org.apache.webbeans.web.lifecycle.WebContainerLifecycle
 ################################################################################################
 
 ################################### Default JNDI Service #######################################
@@ -47,7 +46,7 @@ org.apache.webbeans.spi.adaptor.ELAdaptor=org.apache.webbeans.el22.EL22Adaptor
 
 ################################### Default Contexts Service ####################################
 #Default implementation of org.apache.webbeans.corespi.ContextsService.
-org.apache.webbeans.spi.ContextsService=org.ops4j.pax.cdi.undertow.openwebbeans.impl.WabContextsLifecycle
+org.apache.webbeans.spi.ContextsService=org.apache.webbeans.web.context.WebContextsService
 ################################################################################################
 
 ################################### Default Contexts Service ####################################
