--- a/pax-cdi-samples/pax-cdi-sample2-service/pom.xml
+++ b/pax-cdi-samples/pax-cdi-sample2-service/pom.xml
@@ -81,8 +81,11 @@
                         <Bundle-SymbolicName>org.ops4j.pax.cdi.sample2.service</Bundle-SymbolicName>
                         <Import-Package>
                             javax.persistence*;version="[1.1,3)",
-                            org.apache.deltaspike.partialbean.impl.interception,
-                            org.apache.deltaspike.partialbean.impl.proxy,
+                            org.apache.deltaspike.partialbean.impl.interception;resolution:=optional,
+                            org.apache.deltaspike.partialbean.impl.proxy;resolution:=optional,
+                            org.apache.deltaspike.proxy.impl;resolution:=optional,
+                            org.apache.deltaspike.proxy.impl.invocation;resolution:=optional,
+                            org.apache.deltaspike.proxy.spi;resolution:=optional,
                             org.apache.deltaspike.data.impl.handler,
                             *
                         </Import-Package>
