--- a/pax-cdi-weld/pom.xml
+++ b/pax-cdi-weld/pom.xml
@@ -80,6 +80,7 @@
                 <configuration>
                     <instructions>
                         <Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
+                        <Bundle-Activator>${bundle.namespace}.impl.Activator</Bundle-Activator>
                         <Import-Package>
                             org.jboss.weld.*; version="[1,3)",
                             org.slf4j;version="[1.6,2)";resolution:=optional,
