--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
         <module>pax-cdi-undertow-openwebbeans</module>
         <module>pax-cdi-undertow-weld</module>
         <module>pax-cdi-manual</module>
+        <module>pax-cdi-weld-fragment</module>
     </modules>
 
     <profiles>
