--- a/pax-cdi-parent/pom.xml
+++ b/pax-cdi-parent/pom.xml
@@ -13,7 +13,7 @@
     <name>OPS4J Pax CDI Parent POM</name>
 
     <properties>
-        <deltaspike.version>1.4.1-SNAPSHOT</deltaspike.version>
+        <deltaspike.version>1.4.2-SNAPSHOT</deltaspike.version>
         <guava.version>13.0.1</guava.version>
         <jersey.version>1.13</jersey.version>
         <jetty.version>9.0.7.v20131107</jetty.version>
@@ -31,7 +31,7 @@
         <pax.web.version>4.0.0</pax.web.version>
 
         <slf4j.version>1.6.4</slf4j.version>
-        <weld2.version>2.2.11.Final</weld2.version>
+        <weld2.version>2.2.14-SNAPSHOT</weld2.version>
         <xbean.version>4.3</xbean.version>
 
         <pax.cdi.wiki.url>http://team.ops4j.org/wiki/display/paxcdi/</pax.cdi.wiki.url>
