--- a/pax-cdi-samples/pax-cdi-sample2-service/pom.xml
+++ b/pax-cdi-samples/pax-cdi-sample2-service/pom.xml
@@ -81,14 +81,16 @@
                         <Bundle-SymbolicName>org.ops4j.pax.cdi.sample2.service</Bundle-SymbolicName>
                         <Import-Package>
                             javax.persistence*;version="[1.1,3)",
-                            org.apache.deltaspike.partialbean.impl.interception;resolution:=optional,
-                            org.apache.deltaspike.partialbean.impl.proxy;resolution:=optional,
-                            org.apache.deltaspike.proxy.impl;resolution:=optional,
-                            org.apache.deltaspike.proxy.impl.invocation;resolution:=optional,
-                            org.apache.deltaspike.proxy.spi;resolution:=optional,
-                            org.apache.deltaspike.data.impl.handler,
+                            org.apache.deltaspike.proxy.impl,
+                            org.apache.deltaspike.proxy.impl.invocation,
+                            org.apache.deltaspike.proxy.spi,
                             *
                         </Import-Package>
+                        <Require-Bundle>
+                            org.apache.deltaspike.core.deltaspike-core-impl,
+                            org.apache.deltaspike.modules.deltaspike-data-module-impl,
+                            org.apache.deltaspike.modules.deltaspike-jpa-module-impl
+                        </Require-Bundle>
                         <Require-Capability>
                             org.ops4j.pax.cdi.extension; filter:="(&amp;(extension=pax-cdi-extension)(version&gt;=${version;==;${pax.cdi.osgi.version.clean}})(!(version&gt;=${version;=+;${pax.cdi.osgi.version.clean}})))",
                             org.ops4j.pax.cdi.extension; filter:="(&amp;(extension=deltaspike-partial-bean-module-impl))",
