--- a/pax-cdi-samples/pom.xml
+++ b/pax-cdi-samples/pom.xml
@@ -30,6 +30,8 @@
         <module>pax-cdi-sample7-service-impl102</module>
         <module>pax-cdi-sample7-client-dynamic</module>
         <module>pax-cdi-sample8</module>
+        <module>pax-cdi-sample10</module>
+        <module>pax-cdi-sample10-client</module>
     </modules>
 
 </project>
