--- a/itest/src/it/itest-cdi10/pom.xml
+++ b/itest/src/it/itest-cdi10/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.ops4j.pax.cdi</groupId>
-        <version>0.10.0-SNAPSHOT</version>
+        <version>0.13.0-SNAPSHOT</version>
         <artifactId>pax-cdi-parent</artifactId>
         <relativePath>../../../pax-cdi-parent</relativePath>
     </parent>
@@ -231,10 +231,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.apache.geronimo.specs</groupId>
-            <artifactId>geronimo-servlet_3.0_spec</artifactId>
-            <scope>provided</scope>
-        </dependency>
+			<groupId>${servlet.spec.groupId}</groupId>
+			<artifactId>${servlet.spec.artifactId}</artifactId>
+		</dependency>
 
         <dependency>
             <groupId>org.apache.geronimo.specs</groupId>
