--- a/pax-cdi-samples/pax-cdi-sample1-web/pom.xml
+++ b/pax-cdi-samples/pax-cdi-sample1-web/pom.xml
@@ -32,10 +32,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.apache.geronimo.specs</groupId>
-            <artifactId>geronimo-servlet_3.0_spec</artifactId>
-            <scope>provided</scope>
-        </dependency>
+			<groupId>${servlet.spec.groupId}</groupId>
+			<artifactId>${servlet.spec.artifactId}</artifactId>
+		</dependency>
 
     </dependencies>
 
