--- a/pax-cdi-web-weld/pom.xml
+++ b/pax-cdi-web-weld/pom.xml
@@ -1,138 +1,138 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>org.ops4j.pax.cdi</groupId>
-        <version>0.13.0-SNAPSHOT</version>
-        <artifactId>pax-cdi-parent</artifactId>
-        <relativePath>../pax-cdi-parent</relativePath>
-    </parent>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>org.ops4j.pax.cdi</groupId>
+		<version>0.13.0-SNAPSHOT</version>
+		<artifactId>pax-cdi-parent</artifactId>
+		<relativePath>../pax-cdi-parent</relativePath>
+	</parent>
 
-    <artifactId>pax-cdi-web-weld</artifactId>
-    <packaging>bundle</packaging>
+	<artifactId>pax-cdi-web-weld</artifactId>
+	<packaging>bundle</packaging>
 
-    <name>OPS4j Pax CDI Web Weld Adapter</name>
+	<name>OPS4j Pax CDI Web Weld Adapter</name>
 
-    <properties>
-        <bundle.symbolicName>org.ops4j.pax.cdi.web.weld</bundle.symbolicName>
-        <bundle.namespace>org.ops4j.pax.cdi.web.weld</bundle.namespace>
-        <jetty.version>9.0.7.v20131107</jetty.version>
-    </properties>
+	<properties>
+		<bundle.symbolicName>org.ops4j.pax.cdi.web.weld</bundle.symbolicName>
+		<bundle.namespace>org.ops4j.pax.cdi.web.weld</bundle.namespace>
+		<jetty.version>9.2.10.v20150310</jetty.version>
+	</properties>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.ops4j.pax.cdi</groupId>
-            <artifactId>pax-cdi-weld</artifactId>
-            <version>${project.version}</version>
-            <scope>provided</scope>
-        </dependency>
+	<dependencies>
+		<dependency>
+			<groupId>org.ops4j.pax.cdi</groupId>
+			<artifactId>pax-cdi-weld</artifactId>
+			<version>${project.version}</version>
+			<scope>provided</scope>
+		</dependency>
 
-        <dependency>
-            <groupId>org.ops4j.pax.cdi</groupId>
-            <artifactId>pax-cdi-web</artifactId>
-            <version>${project.version}</version>
-            <scope>provided</scope>
-        </dependency>
+		<dependency>
+			<groupId>org.ops4j.pax.cdi</groupId>
+			<artifactId>pax-cdi-web</artifactId>
+			<version>${project.version}</version>
+			<scope>provided</scope>
+		</dependency>
 
 		<!-- Jetty -->
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-util</artifactId>
-            <version>${jetty.version}</version>
+			<version>${jetty.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-io</artifactId>
-            <version>${jetty.version}</version>
+			<version>${jetty.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-http</artifactId>
-            <version>${jetty.version}</version>
+			<version>${jetty.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-continuation</artifactId>
-            <version>${jetty.version}</version>
+			<version>${jetty.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-server</artifactId>
-            <version>${jetty.version}</version>
+			<version>${jetty.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-security</artifactId>
-            <version>${jetty.version}</version>
+			<version>${jetty.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-servlet</artifactId>
-            <version>${jetty.version}</version>
+			<version>${jetty.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-xml</artifactId>
-            <version>${jetty.version}</version>
+			<version>${jetty.version}</version>
 			<scope>provided</scope>
 		</dependency>
 
 
-<!--         <dependency> -->
-<!--             <groupId>org.eclipse.jetty.aggregate</groupId> -->
-<!--             <artifactId>jetty-all-server</artifactId> -->
-<!--             <scope>provided</scope> -->
-<!--         </dependency> -->
+		<!-- <dependency> -->
+		<!-- <groupId>org.eclipse.jetty.aggregate</groupId> -->
+		<!-- <artifactId>jetty-all-server</artifactId> -->
+		<!-- <scope>provided</scope> -->
+		<!-- </dependency> -->
 
-        <dependency>
-            <groupId>org.apache.geronimo.specs</groupId>
-            <artifactId>geronimo-servlet_3.0_spec</artifactId>
-            <scope>provided</scope>
-        </dependency>
+		<dependency>
+			<groupId>${servlet.spec.groupId}</groupId>
+			<artifactId>${servlet.spec.artifactId}</artifactId>
+		</dependency>
 
-        <dependency>
-            <groupId>org.apache.geronimo.specs</groupId>
-            <artifactId>geronimo-jsp_2.2_spec</artifactId>
-            <version>1.1</version>
-            <scope>provided</scope>
-        </dependency>
+		<dependency>
+			<groupId>org.apache.geronimo.specs</groupId>
+			<artifactId>geronimo-jsp_2.2_spec</artifactId>
+			<version>1.1</version>
+			<scope>provided</scope>
+		</dependency>
 
-        <dependency>
-            <groupId>org.apache.geronimo.specs</groupId>
-            <artifactId>geronimo-el_2.2_spec</artifactId>
-            <scope>provided</scope>
-        </dependency>
-
+		<dependency>
+			<groupId>org.apache.geronimo.specs</groupId>
+			<artifactId>geronimo-el_2.2_spec</artifactId>
+			<scope>provided</scope>
+		</dependency>
 
 
-    </dependencies>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.felix</groupId>
-                <artifactId>maven-bundle-plugin</artifactId>
-                <configuration>
-                    <instructions>
-                        <Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
-                        <Service-Component>OSGI-INF/*</Service-Component>
-                        <Import-Package>
-                            org.jboss.weld.*; version="[1,3)",
-                            javax.servlet.*;version="[2,4)",
-                            org.eclipse.jetty*;version="[8,10)",
-                            org.slf4j;version="[1.6,2)";resolution:=optional,
-                            *
-                        </Import-Package>
-                    </instructions>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+
+	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.felix</groupId>
+				<artifactId>maven-bundle-plugin</artifactId>
+				<configuration>
+					<instructions>
+						<Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
+						<Service-Component>OSGI-INF/*</Service-Component>
+						<Import-Package>
+							org.jboss.weld.*; version="[1,3)",
+							javax.servlet.*;version="[2,4)",
+							org.eclipse.jetty*;version="[8,10)",
+							org.slf4j;version="[1.6,2)";resolution:=optional,
+							*
+						</Import-Package>
+					</instructions>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 
 
