--- a/tck/pax-cdi-tck-porting/pom.xml
+++ b/tck/pax-cdi-tck-porting/pom.xml
@@ -78,9 +78,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.apache.geronimo.specs</groupId>
-            <artifactId>geronimo-servlet_3.0_spec</artifactId>
-        </dependency>
+			<groupId>${servlet.spec.groupId}</groupId>
+			<artifactId>${servlet.spec.artifactId}</artifactId>
+		</dependency>
 
         <dependency>
             <groupId>org.jboss.jsr299.tck</groupId>
