Rename -web- artifacts to -jetty- to make things more clear. Fix pax-web + undertow support.

--- a/itest/src/it/itest-osgi6/pom.xml
+++ b/itest/src/it/itest-osgi6/pom.xml
@@ -465,7 +465,7 @@
 
                 <dependency>
                     <groupId>org.ops4j.pax.cdi</groupId>
-                    <artifactId>pax-cdi-web-openwebbeans</artifactId>
+                    <artifactId>pax-cdi-jetty-openwebbeans</artifactId>
                     <version>${project.version}</version>
                     <scope>provided</scope>
                 </dependency>
@@ -490,7 +490,7 @@
 
                 <dependency>
                     <groupId>org.ops4j.pax.cdi</groupId>
-                    <artifactId>pax-cdi-web-weld</artifactId>
+                    <artifactId>pax-cdi-jetty-weld</artifactId>
                     <version>${project.version}</version>
                     <scope>provided</scope>
                 </dependency>
