--- a/itest/src/it/itest-standalone/pom.xml
+++ b/itest/src/it/itest-standalone/pom.xml
@@ -542,7 +542,7 @@
                 
                 <dependency>
                     <groupId>org.ops4j.pax.cdi</groupId>
-                    <artifactId>pax-cdi-web-openwebbeans</artifactId>
+                    <artifactId>pax-cdi-jetty-openwebbeans</artifactId>
                     <version>${project.version}</version>
                     <scope>provided</scope>
                 </dependency>
@@ -567,7 +567,7 @@
 
                 <dependency>
                     <groupId>org.ops4j.pax.cdi</groupId>
-                    <artifactId>pax-cdi-web-weld</artifactId>
+                    <artifactId>pax-cdi-jetty-weld</artifactId>
                     <version>${project.version}</version>
                     <scope>provided</scope>
                 </dependency>
