--- a/pax-cdi-jetty-openwebbeans/pom.xml
+++ b/pax-cdi-jetty-openwebbeans/pom.xml
@@ -2,32 +2,26 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.ops4j.pax.cdi</groupId>
-        <artifactId>pax-cdi-parent</artifactId>
         <version>1.0.0-SNAPSHOT</version>
+        <artifactId>pax-cdi-parent</artifactId>
         <relativePath>../pax-cdi-parent</relativePath>
     </parent>
-    <artifactId>pax-cdi-undertow-openwebbeans</artifactId>
+    <artifactId>pax-cdi-jetty-openwebbeans</artifactId>
     <packaging>bundle</packaging>
-    
-    <name>OPS4J Pax CDI Undertow OpenWebBeans Adapter</name>
+
+    <name>OPS4J Pax CDI Jetty OpenWebBeans Adapter</name>
 
     <properties>
-        <bundle.symbolicName>org.ops4j.pax.cdi.undertow.openwebbeans</bundle.symbolicName>
-        <bundle.namespace>org.ops4j.pax.cdi.undertow.openwebbeans</bundle.namespace>
+        <bundle.symbolicName>org.ops4j.pax.cdi.jetty.openwebbeans</bundle.symbolicName>
+        <bundle.namespace>org.ops4j.pax.cdi.jetty.openwebbeans</bundle.namespace>
     </properties>
 
     <dependencies>
+
         <dependency>
             <groupId>org.ops4j.pax.cdi</groupId>
             <artifactId>pax-cdi-openwebbeans</artifactId>
             <version>${project.version}</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.openwebbeans</groupId>
-            <artifactId>openwebbeans-web</artifactId>
-            <scope>provided</scope>
         </dependency>
 
         <dependency>
@@ -37,21 +31,61 @@
         </dependency>
 
         <dependency>
-            <groupId>org.ops4j.pax.swissbox</groupId>
-            <artifactId>pax-swissbox-tracker</artifactId>
+            <groupId>org.apache.openwebbeans</groupId>
+            <artifactId>openwebbeans-web</artifactId>
+            <scope>provided</scope>
         </dependency>
 
+        <!-- Jetty -->
         <dependency>
-            <groupId>io.undertow</groupId>
-            <artifactId>undertow-servlet</artifactId>
-            <version>1.0.15.Final</version>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-util</artifactId>
+            <version>${jetty.version}</version>
+            <scope>provided</scope>
         </dependency>
-
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-io</artifactId>
+            <version>${jetty.version}</version>
+            <scope>provided</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-http</artifactId>
+            <version>${jetty.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-continuation</artifactId>
+            <version>${jetty.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-server</artifactId>
+            <version>${jetty.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-security</artifactId>
+            <version>${jetty.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-servlet</artifactId>
+            <version>${jetty.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-xml</artifactId>
+            <version>${jetty.version}</version>
+            <scope>provided</scope>
+        </dependency>
+		
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
@@ -59,16 +93,22 @@
         </dependency>
 
         <dependency>
-            <groupId>javax.servlet.jsp</groupId>
-            <artifactId>javax.servlet.jsp-api</artifactId>
-            <version>2.3.1</version>
+            <groupId>org.apache.geronimo.specs</groupId>
+            <artifactId>geronimo-atinject_1.0_spec</artifactId>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
-            <groupId>javax.faces</groupId>
-            <artifactId>javax.faces-api</artifactId>
-            <version>2.2</version>
+            <groupId>javax.enterprise</groupId>
+            <artifactId>cdi-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
+
+        <dependency>
+            <groupId>org.apache.geronimo.specs</groupId>
+            <artifactId>geronimo-jsp_2.2_spec</artifactId>
+            <version>1.1</version>
             <scope>provided</scope>
         </dependency>
 
@@ -79,23 +119,15 @@
         </dependency>
 
         <dependency>
-            <groupId>javax.enterprise</groupId>
-            <artifactId>cdi-api</artifactId>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
             <groupId>org.osgi</groupId>
             <artifactId>org.osgi.core</artifactId>
             <scope>provided</scope>
         </dependency>
-
         <dependency>
             <groupId>org.osgi</groupId>
             <artifactId>org.osgi.compendium</artifactId>
             <scope>provided</scope>
         </dependency>
-        
     </dependencies>
 
     <build>
@@ -108,6 +140,7 @@
                         <Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
                         <Import-Package>
                             javax.servlet.*;version="[2,4)",
+                            org.eclipse.jetty*;version="[9.3,10)",
                             org.apache.webbeans.xml,
                             org.slf4j;version="[1.6,2)";resolution:=optional,
                             *
@@ -118,7 +151,5 @@
             </plugin>
         </plugins>
     </build>
-
-
 
 </project>
