--- a/pax-cdi-jetty-weld/pom.xml
+++ b/pax-cdi-jetty-weld/pom.xml
@@ -2,18 +2,19 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.ops4j.pax.cdi</groupId>
-        <artifactId>pax-cdi-parent</artifactId>
         <version>1.0.0-SNAPSHOT</version>
+        <artifactId>pax-cdi-parent</artifactId>
         <relativePath>../pax-cdi-parent</relativePath>
     </parent>
-    <artifactId>pax-cdi-undertow-weld</artifactId>
+
+    <artifactId>pax-cdi-jetty-weld</artifactId>
     <packaging>bundle</packaging>
-    
-    <name>OPS4J Pax CDI Undertow Weld Adapter</name>
+
+    <name>OPS4j Pax CDI Jetty Weld Adapter</name>
 
     <properties>
-        <bundle.symbolicName>org.ops4j.pax.cdi.undertow.weld</bundle.symbolicName>
-        <bundle.namespace>org.ops4j.pax.cdi.undertow.weld</bundle.namespace>
+        <bundle.symbolicName>org.ops4j.pax.cdi.jetty.weld</bundle.symbolicName>
+        <bundle.namespace>org.ops4j.pax.cdi.jetty.weld</bundle.namespace>
     </properties>
 
     <dependencies>
@@ -28,23 +29,59 @@
             <groupId>org.ops4j.pax.cdi</groupId>
             <artifactId>pax-cdi-web</artifactId>
             <version>${project.version}</version>
+            <scope>provided</scope>
         </dependency>
 
+        <!-- Jetty -->
         <dependency>
-            <groupId>org.ops4j.pax.swissbox</groupId>
-            <artifactId>pax-swissbox-tracker</artifactId>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-util</artifactId>
+            <version>${jetty.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-io</artifactId>
+            <version>${jetty.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-http</artifactId>
+            <version>${jetty.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-continuation</artifactId>
+            <version>${jetty.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-server</artifactId>
+            <version>${jetty.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-security</artifactId>
+            <version>${jetty.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-servlet</artifactId>
+            <version>${jetty.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-xml</artifactId>
+            <version>${jetty.version}</version>
+            <scope>provided</scope>
         </dependency>
 
-        <dependency>
-            <groupId>io.undertow</groupId>
-            <artifactId>undertow-servlet</artifactId>
-            <version>1.0.15.Final</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-        </dependency>
 
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -53,16 +90,9 @@
         </dependency>
 
         <dependency>
-            <groupId>javax.servlet.jsp</groupId>
-            <artifactId>javax.servlet.jsp-api</artifactId>
-            <version>2.3.1</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>javax.faces</groupId>
-            <artifactId>javax.faces-api</artifactId>
-            <version>2.2</version>
+            <groupId>org.apache.geronimo.specs</groupId>
+            <artifactId>geronimo-jsp_2.2_spec</artifactId>
+            <version>1.1</version>
             <scope>provided</scope>
         </dependency>
 
@@ -74,16 +104,9 @@
 
         <dependency>
             <groupId>org.osgi</groupId>
-            <artifactId>org.osgi.core</artifactId>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.osgi</groupId>
             <artifactId>org.osgi.compendium</artifactId>
             <scope>provided</scope>
         </dependency>
-        
     </dependencies>
 
     <build>
@@ -97,15 +120,11 @@
                         <Import-Package>
                             org.jboss.weld.*; version="[1,3)",
                             javax.servlet.*;version="[2,4)",
-                            javax.el.*;version="[2,4)",
-                            javax.faces.*;resolution:=optional,
+                            javax.el.*;version="[2.2,4)",
+                            org.eclipse.jetty*;version="[9.3,10)",
                             org.slf4j;version="[1.6,2)";resolution:=optional,
                             *
                         </Import-Package>
-                        <Export-Package />
-                        <Provide-Capability>
-                            org.ops4j.pax.cdi.faces; provider="pax-cdi-undertow-weld"
-                        </Provide-Capability>
                         <_dsannotations>*</_dsannotations>
                     </instructions>
                 </configuration>
